# mcp_ingest

./: .gitignore  CATALOG_DEPLOYMENT.md  Makefile  README.md  TEST_NOW.md  TRIGGER_SYNC.md  mkdocs.yml  pyproject.toml
.github/: CATALOG_WORKFLOW_FIXES.md
.github/RELEASE_NOTES/: v0.1.1.md
.github/workflows/: sync-to-catalog.yml
docs/: api.md  cli.md  development.md  harvest-source.md  harvester.md  index.md  quickstart.md  sdk.md
docs/tutorials/: harvest-source.md
examples/: harvest_mcp_servers_tutorial.md
examples/catalog-automation/scripts/: check_index_consistency.py  rebuild_index.py  sync_from_harvest.py  sync_mcp_servers.py  validate_catalog.py  validate_catalog_index.py  validate_schemas.py
examples/watsonx/: server.py
mcp_ingest/: __init__.py  cli.py  sdk.py
mcp_ingest/detect/: autogen.py  base.py  crewai.py  fastmcp.py  langchain.py  llamaindex.py  raw_mcp.py  semantic_kernel.py
mcp_ingest/emit/: adapters.py  enrich.py  index.py  manifest.py
mcp_ingest/harvest/: repo.py  source.py
mcp_ingest/publishers/: static_index.py
mcp_ingest/register/: gateway_client.py  hub_client.py
mcp_ingest/registry/: __init__.py  client.py  harvest.py  normalize.py  promote.py
mcp_ingest/utils/: ast_parse.py  auth.py  extractor.py  fetch.py  git.py  github_contents.py  http_cache.py  idempotency.py  io.py  jsonschema.py  sse.py  temp.py
mcp_ingest/validate/: mcp_probe.py  sandbox.py  sandbox_container.py
services/harvester/: app.py
tests/: test_examples.py  test_normalize.py  test_promote.py  test_promote_schema.py  test_register.sh
(+15 files in other folders)
